--- a/interface_description.yml
+++ b/interface_description.yml
@@ -1,2 +1,2 @@
 ---
-#Task to create interface description for the vxla-evpn fabric
+#Task to create interface description for the vxlan-evpn fabric
